Finished Testing CommandValidator